Fix spacing of manage jenkins page

--- a/war/src/main/less/modules/section.less
+++ b/war/src/main/less/modules/section.less
@@ -66,7 +66,7 @@
     bottom: -10px;
     right: -10px;
     z-index: -1;
-    border-radius: 6px;
+    border-radius: 10px;
     transition: var(--standard-transition);
     opacity: 0;
     pointer-events: none;
@@ -184,5 +184,6 @@
     font-weight: 500;
     margin: 0;
     line-height: 1.66;
+    margin-right: 10px;
   }
 }
